--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "script.js",
 	"homepage": "https://wptechprodigy.github.io/lineargradientgen",
 	"scripts": {
-		"deploy": "gh-pages -d build"
+		"deploy": "gh-pages -d dist"
 	},
 	"repository": {
 		"type": "git",
